# LeetCode-Scripts

./: .gitmodules  README.md  TwoSum.java  countAndSay.java  plusOne.java  stats.json  substringIndex.java
0008-string-to-integer-atoi/: 0008-string-to-integer-atoi.java
0017-letter-combinations-of-a-phone-number/: 0017-letter-combinations-of-a-phone-number.java
0026-remove-duplicates-from-sorted-array/: 0026-remove-duplicates-from-sorted-array.java
0027-remove-element/: 0027-remove-element.java
0033-search-in-rotated-sorted-array/: 0033-search-in-rotated-sorted-array.java
0075-sort-colors/: 0075-sort-colors.java
0088-merge-sorted-array/: 0088-merge-sorted-array.java
0098-validate-binary-search-tree/: 0098-validate-binary-search-tree.java
0112-path-sum/: 0112-path-sum.java
0118-pascals-triangle/: 0118-pascals-triangle.java
0125-valid-palindrome/: 0125-valid-palindrome.java
0138-copy-list-with-random-pointer/: 0138-copy-list-with-random-pointer.java
0144-binary-tree-preorder-traversal/: 0144-binary-tree-preorder-traversal.java
0145-binary-tree-postorder-traversal/: 0145-binary-tree-postorder-traversal.java
0157-read-n-characters-given-read4/: 0157-read-n-characters-given-read4.java
0173-binary-search-tree-iterator/: 0173-binary-search-tree-iterator.java
0191-number-of-1-bits/: 0191-number-of-1-bits.java
0198-house-robber/: 0198-house-robber.java
0199-binary-tree-right-side-view/: 0199-binary-tree-right-side-view.java
0283-move-zeroes/: 0283-move-zeroes.java
0345-reverse-vowels-of-a-string/: 0345-reverse-vowels-of-a-string.java
0374-guess-number-higher-or-lower/: 0374-guess-number-higher-or-lower.java
0392-is-subsequence/: 0392-is-subsequence.java
0485-max-consecutive-ones/: 0485-max-consecutive-ones.java
0740-delete-and-earn/: 0740-delete-and-earn.java
0747-min-cost-climbing-stairs/: 0747-min-cost-climbing-stairs.java
0783-search-in-a-binary-search-tree/: 0783-search-in-a-binary-search-tree.java
0871-keys-and-rooms/: 0871-keys-and-rooms.java
0941-sort-array-by-parity/: 0941-sort-array-by-parity.java
0957-minimum-add-to-make-parentheses-valid/: 0957-minimum-add-to-make-parentheses-valid.java
0969-number-of-recent-calls/: 0969-number-of-recent-calls.java
0978-valid-mountain-array/: 0978-valid-mountain-array.java
1089-remove-vowels-from-a-string/: 1089-remove-vowels-from-a-string.java
1123-single-row-keyboard/: 1123-single-row-keyboard.java
1137-height-checker/: 1137-height-checker.java
1231-replace-elements-with-greatest-element-on-right-side/: 1231-replace-elements-with-greatest-element-on-right-side.java
1236-n-th-tribonacci-number/: 1236-n-th-tribonacci-number.java
1250-longest-common-subsequence/: 1250-longest-common-subsequence.java
1341-split-a-string-in-balanced-strings/: 1341-split-a-string-in-balanced-strings.java
1392-find-the-difference-of-two-arrays/: 1392-find-the-difference-of-two-arrays.java
1404-print-immutable-linked-list-in-reverse/: 1404-print-immutable-linked-list-in-reverse.java
1406-subtract-the-product-and-sum-of-digits-of-an-integer/: 1406-subtract-the-product-and-sum-of-digits-of-an-integer.java
1421-find-numbers-with-even-number-of-digits/: 1421-find-numbers-with-even-number-of-digits.java
1463-the-k-weakest-rows-in-a-matrix/: 1463-the-k-weakest-rows-in-a-matrix.java
1468-check-if-n-and-its-double-exist/: 1468-check-if-n-and-its-double-exist.java
1505-create-target-array-in-the-given-order/: 1505-create-target-array-in-the-given-order.java
1570-final-prices-with-a-special-discount-in-a-shop/: 1570-final-prices-with-a-special-discount-in-a-shop.java
1572-subrectangle-queries/: 1572-subrectangle-queries.java
1580-shuffle-the-array/: 1580-shuffle-the-array.java
1742-widest-vertical-area-between-two-points-containing-no-points/: 1742-widest-vertical-area-between-two-points-containing-no-points.java
1797-goal-parser-interpretation/: 1797-goal-parser-interpretation.java
1895-minimum-number-of-operations-to-move-all-balls-to-each-box/: 1895-minimum-number-of-operations-to-move-all-balls-to-each-box.java
1904-second-largest-digit-in-a-string/: 1904-second-largest-digit-in-a-string.java
1916-find-center-of-star-graph/: 1916-find-center-of-star-graph.java
1927-maximum-ascending-subarray-sum/: 1927-maximum-ascending-subarray-sum.java
C++/: .cproject  .project  Makefile  mySqrt.cpp  (+2 more)
C++/CppExercises/: .clang-format  CMakeLists.txt  main.cpp
C++/CppExercises/Array/: CMakeLists.txt
C++/CppExercises/Array/include/: ArrayUtilities.h
C++/CppExercises/Array/src/: ArrayUtilities.cpp
C++/CppExercises/Array/test/: CMakeLists.txt
C++/CppExercises/Array/test/src/: arrayUtilTests.cpp
C++/CppExercises/Heap/: CMakeLists.txt
C++/CppExercises/Heap/include/: HeapUtilities.h
C++/CppExercises/Heap/src/: HeapUtilities.cpp
C++/CppExercises/Heap/test/: CMakeLists.txt
C++/CppExercises/Heap/test/src/: HeapUtilTests.cpp
C++/CppExercises/LinkedList/: CMakeLists.txt
C++/CppExercises/LinkedList/include/: ListADT.hpp  SinglyLinkedList.hpp
C++/CppExercises/LinkedList/src/: SinglyLinkedList.cpp
C++/CppExercises/LinkedList/test/: CMakeLists.txt
C++/CppExercises/LinkedList/test/src/: SinglyLinkedListTests.cpp
C++/CppExercises/String/: CMakeLists.txt
C++/CppExercises/String/include/: StringUtilities.hpp
C++/CppExercises/String/src/: StringUtilities.cpp
C++/CppExercises/String/test/: CMakeLists.txt
C++/CppExercises/String/test/src/: stringUtilTests.cpp
C++/CppExercises/docs/: CMakeLists.txt
C++/CppExercises/include/: ArrayUtilities.h  ListNode.h  ListNode.hpp  ListNodeUtilities.h  ListNodeUtilities.hpp  MathUtilities.h  StringUtilities.hpp  TreeNode.hpp  TreeNodeUtilities.hpp
C++/CppExercises/src/: ArrayUtilities.cpp  ListNode.cpp  ListNodeUtilities.cpp  MathUtilities.cpp  Predicates.cpp  StringUtilities.cpp  TreeNode.cpp  TreeNodeUtilities.cpp
C++/CppExercises/test/: CMakeLists.txt  arrayUtilTests.cpp  listUtilTests.cpp  stringUtilTests.cpp
C++/CppExercises/test/src/: arrayUtilTests.cpp  listUtilTests.cpp  mathUtilTests.cpp  stringUtilTests.cpp
(+122 files in other folders)
